--- a/main.ipynb
+++ b/main.ipynb
@@ -3,21 +3,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0578adaa-047c-4523-a194-fe8bc4c7aa0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import sys; sys.path.insert(0, '..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9ae075ca-90de-499c-8b57-7e8a3d4b955b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import gzip\n",
     "import json\n",
+    "import os\n",
     "import pathlib\n",
     "\n",
-    "import ezgpx\n",
-    "\n",
-    "from fit2gpx import StravaConverter\n",
+    "import fitparse\n",
     "import pandas as pd\n",
-    "from garmin_fit_sdk import Decoder, Stream\n",
-    "import garmin_fit_sdk\n",
-    "from rich import print"
+    "from tqdm import tqdm\n",
+    "from rich import print\n",
+    "import numpy as np\n",
+    "\n",
+    "from shapely import LineString\n",
+    "\n",
+    "import geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e41e8a0-ec16-4266-82a1-d81320372166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from convert import (process_activities_dataframe, count_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d51971a6-438f-4c93-8769-2340f6d22daa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from main import main, unzip_activities, convert_activities, extract_polylines"
    ]
   },
   {
@@ -27,273 +63,240 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/export_26599358/activities.csv\")"
+    "IN_DIR = \"data/export\"\n",
+    "OUT_DIR = \"data/out\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5674a755-9555-45cb-9a0b-58735f6fcecb",
+   "id": "3a1de5bd-3a16-4006-b9ea-6ef699c2812a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rides = df[df['Activity Type'].isin(['Ride', 'E-Bike Ride'])]\n",
-    "len(rides)"
+    "# ! rm -rf data/out\n",
+    "# ! mkdir data/out"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2930b9b7-a423-4b0b-9df4-3d2027fd6c88",
+   "id": "0d6bff01-7d2a-4199-a535-a4180b14021a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rides['Activity ID']"
+    "# read and prepepare activities data\n",
+    "df = pd.read_csv(pathlib.Path(IN_DIR).joinpath(\"activities.csv\"))\n",
+    "df = process_activities_dataframe(df)\n",
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66752ab2-89df-48fb-adbe-7e1ad8dfe688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7c57a4d-322c-4bb8-a174-8bd0161337f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0120150d-2ca0-4cdc-9643-5e5e6eeadcab",
+   "metadata": {},
+   "source": [
+    "## Unzip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c02649-b168-4b28-b554-af9555e48c28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = unzip_activities(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b712b4b-e5ae-460c-978c-4087b97b0bae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85077021-84c3-40f1-8573-77a186953277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# len(df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8b3e3ca-d951-4384-ad25-12f0f380b480",
+   "id": "cc84216b-019a-4ef3-85c7-d64cc266926f",
    "metadata": {},
    "source": [
-    "## fit"
+    "## Extract activities"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2dde009-5475-433f-9a68-5366464500d3",
+   "id": "41d53592-45dc-4ff9-a505-d4031cd176c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \"data/export_26599358/activities/9584919724.fit.gz\"\n",
-    "file_out = \"data/out/10013390402.fit\""
+    "# df = convert_activities(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1bf350-c567-4336-b49f-8ce0cb8223b6",
+   "id": "017689b0-720b-4231-ab4d-38391974c906",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = pathlib.Path(\"data/export_26599358/activities_gpx\")"
+    "# df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a01a5dda-8c51-4064-97a0-6981ee5a5690",
+   "id": "ae9cda53-224a-4803-90b5-d28392f0501d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [x for x in path.glob('**/*') if x.is_file()]"
+    "# len(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24b8004d-8d01-4bd1-8379-562dad2d6487",
+   "id": "07618ba8-7806-4f81-8a54-f1f9dcaed6d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(files)"
+    "# df.to_csv(\"save.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b6374e-2ff4-4691-9c70-60bf2c2b0874",
+   "metadata": {},
+   "source": [
+    "## Get geometry"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88a9ae87-856d-4ebe-8060-6b370b971c25",
+   "id": "a6738fae-17cb-4b39-a6dd-2de61e17f85d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gpx = ezgpx.GPX(\n",
-    "#     \"data/export_26599358/activities_gpx/10061108292.gpx\"\n",
-    "# )"
+    "df = pd.read_csv(\"save.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538df9d6-1111-4f55-8ae3-d63f72660bc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6eb04c4-1079-40bd-8357-d40a66d7b626",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e47dd96-7949-4501-a5a3-e1ca97efa5f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc0b01f8-9b2a-4818-8774-391ea71c07fc",
+   "id": "eb28e07f-f83c-49ad-a6b0-82f40adf08cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DIR_STRAVA = \"data/export_26599358\"\n",
-    "\n",
-    "# # Step 1: Create StravaConverter object\n",
-    "# # - Note: the dir_in must be the path to the central unzipped Strava bulk export folder\n",
-    "# # - Note: You can specify the dir_out if you wish. By default it is set to 'activities_gpx', which will be created in main Strava folder specified.\n",
-    "\n",
-    "# strava_conv = StravaConverter(dir_in=DIR_STRAVA)\n",
-    "\n",
-    "# # Step 2: Unzip the zipped files\n",
-    "# strava_conv.unzip_activities()\n",
-    "\n",
-    "# # Step 3: Add metadata to existing GPX files\n",
-    "# strava_conv.add_metadata_to_gpx()\n",
-    "\n",
-    "# # Step 4: Convert FIT to GPX\n",
-    "# strava_conv.strava_fit_to_gpx()"
+    "df = extract_polylines(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff4f5e8-768a-465f-89eb-aa7d20cc9e3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14e65461-b29f-4cd3-91b9-a5541ad22a0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc7e6b84-3b45-4c6b-a7c2-9eb7c4ba93ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7266e5a1-f61e-44f4-ac79-e913a924abda",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e069eefa-29b3-4522-b7cb-c79ae03f1942",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5de2db59-252e-4b90-986a-aa032da4b3e7",
+   "id": "1501cb75-b245-4959-8804-6bca9fafb3b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with gzip.open(file, 'rb') as f:\n",
-    "    content = f.read()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fefe00b1-8723-4763-af99-0d5fcddfef34",
+   "id": "cf4d18a7-3efd-4d72-a152-076c1aa25a3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(content)"
+    "df['multiline'] = df['multiline'].apply(lambda x: LineString(x))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b690284-5c91-4d52-8ec3-0aefe9cfcdda",
+   "id": "41d0d068-eaf7-4dbe-b898-ad9363841078",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stream = Stream.from_byte_array(content)"
+    "df = geopandas.GeoDataFrame(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef0eaa5-87dd-456f-af3f-5abc9341653b",
+   "id": "9e195d2f-2372-445d-9bc7-72e451f06227",
    "metadata": {},
    "outputs": [],
    "source": [
-    "decoder = Decoder(stream)"
+    "df.rename(columns={\"multiline\": \"geometry\"}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "831eb364-eacf-4d1d-bbee-43737522ae22",
+   "id": "ec5e7471-41c6-4224-9894-ed992de8e126",
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages, errors = decoder.read()"
+    "df = df.set_geometry(\"geometry\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c504d2c-76a3-4ba7-9eb1-1270496f0b3b",
+   "id": "92142456-fe20-4cde-9b6b-3049f50811f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "decoder.is_fit()"
+    "# df.iloc[30:40].plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68c79568-14f3-49ed-b04e-f7bf62c70d1d",
+   "id": "934c9c55-d340-4c92-90e5-b2f031858f8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "decoder.check_integrity()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e873bd9-0a33-4d04-b1bf-b61afbe5245f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "messages.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8282955c-ce23-4d89-990f-1bda135105b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbb6541c-85e2-4531-baec-cc0f28cfc207",
+   "id": "158bddb7-7f84-410c-a290-550f861f28a7",
    "metadata": {},
    "outputs": [],
    "source": []
