update animation scripts

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,6 +24,7 @@
     "import json\n",
     "import os\n",
     "import pathlib\n",
+    "import folium\n",
     "\n",
     "import fitparse\n",
     "import pandas as pd\n",
@@ -148,6 +149,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10994b04-303a-4fe8-9e77-0087aa4243d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "cc84216b-019a-4ef3-85c7-d64cc266926f",
    "metadata": {},
@@ -210,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"save.csv\")"
+    "df = pd.read_csv(\"data/save.csv\")"
    ]
   },
   {
@@ -230,73 +239,147 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "168f2f49-fee8-4850-bdfc-d73d6cf100b3",
+   "metadata": {},
+   "source": [
+    "### Convert geo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4d18a7-3efd-4d72-a152-076c1aa25a3b",
+   "id": "d2e2aab6-b544-4fb4-be46-d9181f4cc011",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['multiline'] = df['multiline'].apply(lambda x: LineString(x))"
+    "# df = pd.read_csv(\"save_lines.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d0d068-eaf7-4dbe-b898-ad9363841078",
+   "id": "96832a59-0414-47e7-b11e-a770aa082741",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = geopandas.GeoDataFrame(df)"
+    "# convert to multiline / geopadas\n",
+    "\n",
+    "# df['multiline'] = df['multiline'].apply(lambda x: LineString(x))\n",
+    "# df = geopandas.GeoDataFrame(df)\n",
+    "# df.rename(columns={\"multiline\": \"geometry\"}, inplace=True)\n",
+    "# df = df.set_geometry(\"geometry\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e195d2f-2372-445d-9bc7-72e451f06227",
+   "id": "258d9aae-5088-4447-b00e-788b69ea0286",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={\"multiline\": \"geometry\"}, inplace=True)"
+    "# df.to_parquet(\"geo.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae1e52a-3a88-4501-b8e2-1683dc6481ee",
+   "metadata": {},
+   "source": [
+    "## Merge"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5e7471-41c6-4224-9894-ed992de8e126",
+   "id": "b60ea69d-fd6a-4917-8b37-5a96d41b8216",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.set_geometry(\"geometry\")"
+    "df = geopandas.read_parquet(\"geo.parquet\")\n",
+    "df = df.drop(\"Filename\", axis=1)\n",
+    "df = df.set_crs(\"4326\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92142456-fe20-4cde-9b6b-3049f50811f5",
+   "id": "68c17a56-f2f6-481d-a040-5fcbc07a542a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.iloc[30:40].plot()"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "934c9c55-d340-4c92-90e5-b2f031858f8c",
+   "id": "3b83ccab-ac77-4814-8874-bef477cf48d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "cities = geopandas.read_file(\"geo.geojson\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158bddb7-7f84-410c-a290-550f861f28a7",
+   "id": "1e5a1773-019d-456e-a03e-ce27db016392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def reverse(coords):\n",
+    "#     return [(x[1], x[0]) for x in coords]\n",
+    "\n",
+    "# # select one route\n",
+    "# geo_route = df.loc[1, \"geometry\"]\n",
+    "# route = list(geo_route.coords)\n",
+    "\n",
+    "# # make map\n",
+    "# m = folium.Map(location=(56, 10), zoom_start=7, tiles=\"cartodb positron\")\n",
+    "# m.add_child(folium.PolyLine(locations=reverse(route)))\n",
+    "# m.add_child(folium.GeoJson(data=cities.to_json()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba772a07-55d8-4103-baaf-63650680d146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined = df.sjoin(cities)\n",
+    "# joined = joined.drop(\"index_right\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df56961b-8db4-4460-aaa6-6f97c056e473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined = joined.drop(\"index_right\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fffa665-1ac8-4847-b8f2-bc1f7829582c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined.to_parquet(\"joined.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc49044-b59b-4075-9601-471f38be4bba",
    "metadata": {},
    "outputs": [],
    "source": []
