--- a/notebooks/map.ipynb
+++ b/notebooks/map.ipynb
@@ -13,7 +13,9 @@
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from datetime import datetime, timedelta"
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "import osmnx as ox"
    ]
   },
   {
@@ -74,13 +76,13 @@
    "outputs": [],
    "source": [
     "# filter out recent activities\n",
-    "df = df[df['Activity Date'] < '2021-05-24']"
+    "# df = df[df['Activity Date'] < '2021-05-24']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a798693f-d5e5-401d-bc2f-6cabd93eb951",
+   "id": "d2817723-a1ce-4937-9183-e8d0e91e8a92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,11 +90,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a611f8-7216-4836-96db-db91400911d0",
+   "id": "aed03d9e-fbc4-4341-ab59-915a6947ec8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.loc[0]"
+    "city_name = \"Göteborg, Sweden\"\n",
+    "city_gdf = ox.geocode_to_gdf(city_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c77000-cf99-4f66-aa98-0201f650a12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_gdf.bbox_north"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80a74d9-7103-4e86-a3f1-e20a02128253",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_gdf.bbox_south"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c344388c-46b1-4841-8362-d0c61ea5e36a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9370b599-ad82-4622-8e40-95ee984ca31b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cca5eff-e0b0-49a5-86ed-02228aa9adeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a798693f-d5e5-401d-bc2f-6cabd93eb951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40007612-98d3-4423-aad9-c6a8922c1757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.to_crs(\"EPSG:3006\")"
    ]
   },
   {
@@ -102,8 +169,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.head(1).plot()"
+    "df.head(1).plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57334319-d4e0-46d0-8eb0-07f47d717fa3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f60fc18-7c5a-408c-9aaa-6a9658eab126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['x', 'y']] = pd.DataFrame(df['geometry'].apply(lambda x: x.xy).tolist(), index=df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04402f14-f3d0-4bb2-b900-b6bd2026d62f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "398656ee-5da6-4ce7-9224-8976eca968ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(df[\"x\"].apply(lambda x: np.array(x).max())).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ad7fd0a-5c82-437b-b59c-4630d95a9c43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(df[\"y\"].apply(lambda x: np.array(x).max())).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e66f703-230b-4f82-aedc-b127b0fe656e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72e10e90-5304-42bd-9310-580a60e72d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(df[\"x\"].apply(lambda x: np.array(x).min())).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18c40f6c-bf8f-4712-b622-a67f503f3bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(df[\"y\"].apply(lambda x: np.array(x).min())).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb599afa-7c1e-48d5-997c-1ebef6fcc7bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "384557 - 295637"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fc614bd-8924-4c3b-865b-1b3876e2224c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -112,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# l = df.iloc[0][\"geometry\"]"
+    "l = df.iloc[0][\"geometry\"]"
    ]
   },
   {
@@ -122,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x, y = l.xy"
+    "x, y = l.xy"
    ]
   },
   {
@@ -132,41 +291,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def plot(df):\n",
-    "#     # Create the figure and axis\n",
-    "#     # fig, ax = plt.subplots(figsize=(8, 6))\n",
-    "#     fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "def plot(df):\n",
+    "    # Create the figure and axis\n",
+    "    # fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "    fig, ax = plt.subplots(figsize=(6, 6))\n",
     "    \n",
-    "#     # Set the background color to black\n",
-    "#     # fig.patch.set_facecolor('black')  # Figure background\n",
-    "#     ax.set_facecolor('black')  # Axis background\n",
+    "    # Set the background color to black\n",
+    "    # fig.patch.set_facecolor('black')  # Figure background\n",
+    "    ax.set_facecolor('black')  # Axis background\n",
     "    \n",
-    "#     # Set specific bounds for x and y axes\n",
-    "#     x_lim, y_lim = 11.8, 57.6\n",
-    "#     ax.set_xlim(x_lim, x_lim+0.2)\n",
-    "#     ax.set_ylim(y_lim, y_lim+0.2)\n",
+    "    # Set specific bounds for x and y axes\n",
+    "    x_lim, y_lim = 295637, 6357281\n",
+    "    ax.set_xlim(x_lim, x_lim+40000)\n",
+    "    ax.set_ylim(y_lim, y_lim+40000) \n",
     "    \n",
-    "#     # Set aspect ratio to equal\n",
-    "#     ax.set_aspect('equal', adjustable='box')\n",
+    "    # Set aspect ratio to equal\n",
+    "    ax.set_aspect('equal', adjustable='box')\n",
     "    \n",
-    "#     # Label the axes\n",
-    "#     ax.set_xlabel(\"X-Axis\")\n",
-    "#     ax.set_ylabel(\"Y-Axis\")\n",
+    "    # Label the axes\n",
+    "    ax.set_xlabel(\"X-Axis\")\n",
+    "    ax.set_ylabel(\"Y-Axis\")\n",
     "    \n",
-    "#     # add a line\n",
-    "#     for i, row in df.iterrows():\n",
-    "#         geo = row[\"geometry\"]\n",
-    "#         x, y = geo.xy\n",
-    "#         ax.plot(x, y, linewidth=0.26, color=\"#C7D3DD\")\n",
+    "    # add a line\n",
+    "    for i, row in df.iterrows():\n",
+    "        geo = row[\"geometry\"]\n",
+    "        x, y = geo.xy\n",
+    "        ax.plot(x, y, linewidth=0.26, color=\"#C7D3DD\")\n",
     "    \n",
-    "#     # Customize ticks to white\n",
-    "#     # ax.tick_params(colors='white')\n",
+    "    # Customize ticks to white\n",
+    "    # ax.tick_params(colors='white')\n",
     "    \n",
-    "#     # Display the plot\n",
-    "#     plt.grid(False)\n",
-    "#     plt.show()\n",
+    "    # Display the plot\n",
+    "    plt.grid(False)\n",
+    "    plt.show()\n",
     "\n",
-    "#     return fig, ax"
+    "    return fig, ax"
    ]
   },
   {
@@ -176,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, ax = plot(df)"
+    "fig, ax = plot(df)"
    ]
   },
   {
