update map notebook

--- a/map.ipynb
+++ b/map.ipynb
@@ -55,6 +55,100 @@
    "id": "6fd12a63-9f10-4dc4-be31-b449594fb73f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "d = df[['Activity ID', 'Activity Date', 'Activity Type', 'Activity Name', 'Distance', 'geometry', 'city']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e64719e-0785-46da-a8aa-c89abde54196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91f2b76b-c97d-4cef-b4c7-dcf81e83f1c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d['geometry'] = d['geometry'].apply(lambda x: str(x)[0:37] + \"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfb23dfe-0474-4be1-8105-8585d73c3f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(d.to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e49646d-ee1e-476b-9065-087cf1808a73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50539e92-4cd0-46f0-a881-1978b3c52b04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b535a7-6d38-456e-b9ca-4afc06c187a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/strava/activities.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1199aede-5909-414e-ba61-a6ac32750baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = df[['Activity ID', 'Activity Date', 'Activity Type', 'Activity Name', 'Distance', 'Filename']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eac961f-28c3-4c5a-9ae5-b81c644d479f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(d.to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "821251c5-050b-46e8-9b97-944a84fe18df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe3afe59-d237-4b77-a218-f5e0b2707ca4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -64,6 +158,14 @@
    "source": [
     "## Boston"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "268d4b68-1636-48e5-bf5f-7e1ce90bdd8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
